adjust text home link on admin page

--- a/config/locales/pt-BR.admin.yml
+++ b/config/locales/pt-BR.admin.yml
@@ -24,7 +24,7 @@ pt-BR:
     loading: "Carregando"
     toggle_navigation: Toggle navigation
     home:
-      name: "Página Admin"
+      name: "Home"
     pagination:
       previous: "&laquo; Anterior"
       next: "Próximo &raquo;"
