--- a/config/locales/find_results_views.pt-BR.yml
+++ b/config/locales/find_results_views.pt-BR.yml
@@ -2,6 +2,7 @@ pt-BR:
   all_results: 'Todos os resultados para'
   jobs_found: 'vagas encontrada(s)'
   no_jobs: 'Nenhuma vaga encontrada'
+  all_applies: 'Todas as inscrições para esta vaga'
   no_applies: 'Nenhuma inscrição encontrada'
   no_profiles: 'Nenhum perfil encontrado'
   no_stars: 'Nenhuma inscrição selecionada como favorita'
