--- a/config/locales/find_results_views.pt-BR.yml
+++ b/config/locales/find_results_views.pt-BR.yml
@@ -3,6 +3,7 @@ pt-BR:
   jobs_found: 'vagas encontrada(s)'
   no_jobs: 'Nenhuma vaga encontrada'
   all_applies: 'Todas as inscrições para esta vaga'
+  rejected_apply: 'A inscrição para esta vaga foi rejeitada'
   no_applies: 'Nenhuma inscrição encontrada'
   no_profiles: 'Nenhum perfil encontrado'
   no_stars: 'Nenhuma inscrição selecionada como favorita'
