adjust titles for h4

--- a/config/locales/pt-BR-models.yml
+++ b/config/locales/pt-BR-models.yml
@@ -23,6 +23,11 @@ pt-BR:
         date: 'Data'
         code: 'Código'
         job_status: 'Status da Vaga'
+        job_statuses:
+          keys:
+            published: 'Publicada'
+            draft: 'Rascunho'
+            archived: 'Arquivada'
       profile:
         name: 'Nome'
         profile_id: 'Profile ID'
