adjust views proposals and minor erros

--- a/config/locales/pt-BR-models.yml
+++ b/config/locales/pt-BR-models.yml
@@ -40,6 +40,7 @@ pt-BR:
         apply_id: 'Número da Inscrição'
         salary: 'Salário'
         benefits: 'Benefícios'
+        description: 'Descrição'
         expectations: 'Expectativas'
         expected_start: 'Expectativa de Início'
       apply:
