--- a/config/locales/pt-BR.crud-words.yml
+++ b/config/locales/pt-BR.crud-words.yml
@@ -12,7 +12,7 @@ pt-BR:
   view_profile: 'Ver Perfil'
   star_apply: 'Favoritar'
   apply_to: 'Inscrição para'
-  feedback: 'Dar Feedback'
+  feedback: 'Rejeitar e dar feedback'
   send_proposal: 'Fazer Proposta'
   view_proposal: 'Ver Proposta'
   
