--- a/config/locales/pt-BR.crud-words.yml
+++ b/config/locales/pt-BR.crud-words.yml
@@ -6,6 +6,7 @@ pt-BR:
   update: 'Atualizar'
   sure: 'Tem certeza?'
   apply: 'Fazer Inscrição'
+  your_apply: 'Sua inscrição'
   change_status: 'Mudar Status'
   deadline: 'Prazo'
   your_comments: 'Seus Comentários'
