[40] Refactoring views and job openings tests

--- a/config/locales/pt-BR-models.yml
+++ b/config/locales/pt-BR-models.yml
@@ -17,9 +17,10 @@ pt-BR:
         description: 'Descrição'
         skills: 'Habilidades'
         salary: 'Salário'
-        company: 'Empresa'
+        company_id: 'Empresa'
         level: 'Nível'
-        place: 'Lugar'
+        country_id: 'País'
+        city: 'Cidade'
         date: 'Data'
         code: 'Código'
         created_at: 'Criando em'
