[46] Adjust request tests

--- a/config/locales/pt-BR-models.yml
+++ b/config/locales/pt-BR-models.yml
@@ -9,6 +9,8 @@ pt-BR:
       comment: 'Comentário'
       headhunter: 'Recrutador'
       user: 'Usuário'
+      country: 'País'
+      company: 'Empresa'
     attributes:
       headhunter:
         password: 'Senha'
