tests: crud actions

--- a/config/locales/navbar.pt-BR.yml
+++ b/config/locales/navbar.pt-BR.yml
@@ -4,6 +4,7 @@ pt-BR:
   applies: 'Inscrições'
   profiles: 'Perfis'
   stars: 'Favoritos'
+  proposal_comments: 'Comentários da Proposta'
   you_are: 'Logado em'
   search_job: 'Pesquisar Vaga'
   search: 'Pesquisar'
