--- a/config/locales/pt-BR.crud-words.yml
+++ b/config/locales/pt-BR.crud-words.yml
@@ -10,6 +10,7 @@ pt-BR:
   change_status: 'Mudar Status'
   deadline: 'Prazo'
   your_comments: 'Seus Comentários'
+  create_comment: 'Fazer novo comentário'
   view_profile: 'Ver Perfil'
   star_apply: 'Favoritar'
   apply_to: 'Inscrição para'
