refactor: feedback headhunter view

--- a/config/locales/pt-BR.crud-words.yml
+++ b/config/locales/pt-BR.crud-words.yml
@@ -14,7 +14,7 @@ pt-BR:
   view_profile: 'Ver Perfil'
   star_apply: 'Favoritar'
   apply_to: 'Inscrição para'
-  feedback: 'Rejeitar e dar feedback'
+  feedback: 'Dar feedback'
   send_proposal: 'Fazer Proposta'
   view_proposal: 'Ver Proposta'
   to_accept_proposal: 'Aceitar Proposta'
