Feature: add email to receive after accept job opening

--- a/config/locales/pt-BR.crud-words.yml
+++ b/config/locales/pt-BR.crud-words.yml
@@ -19,3 +19,5 @@ pt-BR:
   view_proposal: 'Ver Proposta'
   to_accept_proposal: 'Aceitar Proposta'
   to_reject_proposal: 'Rejeitar Proposta'
+  true: 'Sim'
+  false: 'Não'
